fix: Add pytest unit testing structure for QuipClient
This commit introduces a comprehensive pytest testing framework for the QuipClient, including:

- Fixtures for mocking HTTP responses and client initialization
- Test files for client initialization, URL construction, rate limits, caching, and API methods
- Configuration for pytest and coverage reporting
- Development requirements for testing dependencies

The test structure is placed at the root level and provides good coverage of the client's core functionality.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,9 @@
 [metadata]
 description-file = README.md
+[tool:pytest]
+testpaths = tests
+python_files = test_*.py
+addopts = --cov=quipclient --cov-report=term-missing
+
+[coverage:run]
+source = quipclient
